Playing with Machine Learning